# vecc_SimpleLanguage

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  demo.sh  main.cpp
cmake_modules/: Config.cmake.in  GNUtoolchain.cmake  LLVMtoolchain.cmake  UseLATEX.cmake
cmake_modules/finders/: FindLLVMAr.cmake  FindLLVMNm.cmake  FindLLVMRanLib.cmake
doc/: CMakeLists.txt  TKOM-Stawczyk-Przemyslaw.tex  TKOM-Wstepna-Stawczyk-Przemyslaw.tex  TKOM-Wstępna-Stawczyk_Przemysław.tex  UseLATEX.cmake
example_files/: example_1.vecc  example_2.vecc  example_3.vecc  example_4.vecc  example_fib.vecc  fibonacci.vecc  library.vecc
include/: CMakeLists.txt  exeception.h  general_defines.h  reader.h  vecc_exeception.h  vecc_include.h
include/AST/: CMakeLists.txt
include/AST/expression/: additive_expr.h  and_logic_expr.h  base_logic_expr.h  base_math_expr.h  expression.h  multiply_expr.h  or_logic_exp.h  or_logic_expr.h  realtion_expr.h
include/AST/general/: context.h  function.h  program.h  return.h  variable.h
include/AST/statement/: assign_stmt.h  function_call.h  if_stmt.h  print_stmt.h  return_stmt.h  statement.h  statement_block.h  while_stmt.h
include/error/: exeception.h  logger.h
include/output/: output.h
include/parser/: parser.h
include/scanner/: position.h  reader.h  scanner.h  token.h
src/: CMakeLists.txt  main.cpp  reader.cpp
src/AST/: CMakeLists.txt
src/AST/expression/: additive_expr.cpp  and_logic_exp.cpp  and_logic_expr.cpp  base_logic_exp.cpp  base_logic_expr.cpp  base_math_expr.cpp  multiply_expr.cpp  or_logic_expr.cpp  relation_exp.cpp  relation_expr.cpp
src/AST/general/: context.cpp  function.cpp  program.cpp  return.cpp  variable.cpp
src/AST/statement/: assign_stmt.cpp  assign_stmt.h.cpp  function_call.cpp  if_stmt.cpp  print_stmt.cpp  return_stmt.cpp  statement_block.cpp  while_stmt.cpp
src/error/: logger.cpp
src/parser/: parser.cpp
src/scanner/: position.cpp  reader.cpp  scanner.cpp  token.cpp
test/: CMakeLists.txt  langauage_test.cpp  lexer_test.cpp  reader_test.cpp  scanner_test.cpp  test_main.cpp
test/AST/: CMakeLists.txt  mock_expr.h  mock_stmt.h
test/AST/expression/: add_expr_test.cpp  and_expr_test.cpp  base_logic_expr_test.cpp  base_math_expr_test.cpp  multiply_expr_test.cpp  or_expr_test.cpp  relation_expr_test.cpp
test/AST/general/: context_test.cpp  function_test.cpp  program_test.cpp  variable_test.cpp
test/AST/statement/: assign_stmt_test.cpp  function_call.cpp  if_stmt_test.cpp  print_stmt_test.cpp  return_stmt_test.cpp  statement_block_test.cpp  while_stmt_test.cpp
test/parser/: parser_test.cpp
test/scanner/: reader_test.cpp  scanner_test.cpp
